algunas correcciones mas el agregado de robo de una carta entre jugadores (falta terminar el test)